--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,20 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c09695">  <td>19/01/09 22:05:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;InitialTestNg.goBackToHomepage()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@1151e434]">&lt;&lt;goBackToHomepage</td> 
-<td>&nbsp;</td>  <td>main@1963862935</td>   <td></td> </tr>
-<tr bgcolor="c09695">  <td>19/01/09 22:05:58</td>   <td>1678</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;InitialTestNg.goBackToHomepage()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@1151e434]">&lt;&lt;goBackToHomepage</td> 
-<td>&nbsp;</td>  <td>main@1963862935</td>   <td></td> </tr>
-<tr bgcolor="c09695">  <td>19/01/09 22:05:49</td>   <td>-7081</td> <td>&nbsp;</td><td title="&gt;&gt;InitialTestNg.launchBrowser()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@1151e434]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1963862935</td>   <td></td> </tr>
-<tr bgcolor="c09695">  <td>19/01/09 22:05:55</td>   <td>-1044</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InitialTestNg.register()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@1151e434]">register</td> 
-  <td>main@1963862935</td>   <td></td> </tr>
-<tr bgcolor="c09695">  <td>19/01/09 22:05:57</td>   <td>897</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InitialTestNg.support()[pri:1, instance:test.java.ie.murph.testng.InitialTestNg@1151e434]">support</td> 
-  <td>main@1963862935</td>   <td></td> </tr>
-<tr bgcolor="c09695">  <td>19/01/09 22:05:59</td>   <td>2359</td> <td>&nbsp;</td><td title="&lt;&lt;InitialTestNg.terminateBrowser()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@1151e434]">&lt;&lt;terminateBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1963862935</td>   <td></td> </tr>
-<tr bgcolor="c09695">  <td>19/01/09 22:05:55</td>   <td>-1049</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InitialTestNg.verifyHomepageTitle()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@1151e434]">&gt;&gt;verifyHomepageTitle</td> 
-<td>&nbsp;</td>  <td>main@1963862935</td>   <td></td> </tr>
-<tr bgcolor="c09695">  <td>19/01/09 22:05:57</td>   <td>887</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InitialTestNg.verifyHomepageTitle()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@1151e434]">&gt;&gt;verifyHomepageTitle</td> 
-<td>&nbsp;</td>  <td>main@1963862935</td>   <td></td> </tr>
+<tr bgcolor="e579dc">  <td>19/07/02 21:34:17</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;InitialTestNg.launchBrowser()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@3a03464]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1725097945</td>   <td></td> </tr>
+<tr bgcolor="e579dc">  <td>19/07/02 21:34:18</td>   <td>594</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InitialTestNg.register()[pri:0, instance:test.java.ie.murph.testng.InitialTestNg@3a03464]">register</td> 
+  <td>main@1725097945</td>   <td></td> </tr>
+<tr bgcolor="e579dc">  <td>19/07/02 21:34:18</td>   <td>598</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InitialTestNg.support()[pri:1, instance:test.java.ie.murph.testng.InitialTestNg@3a03464]">support</td> 
+  <td>main@1725097945</td>   <td></td> </tr>
 </table>
